--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
+.rebar3
+_*
+.eunit
+*.o
 *.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+_build
+.idea
+*.iml
+rebar3.crashdump
 *~
-ebin/
-deps/
-_rel
-relsync
-.depsolver_plt
-tests/work
+asngen
+*.asn1db
