--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,84 @@
-%% -*- mode: Erlang; fill-column: 80; comment-column: 75; -*-
-%% Dependencies ================================================================
-{deps, [
-	{getopt, "", {git, "https://github.com/jcomellas/getopt.git", {branch, "master"}}}
+{project_plugins, [
+    erlfmt,
+    % provider_asn1 does not handle umbrella projects yet:
+    % https://github.com/knusbaum/provider_asn1/issues/8
+    {provider_asn1, "0.2.3"}
 ]}.
 
-%% Misc =======================================================================
-{escript_incl_apps,
- [getopt]}.
+{provider_hooks, [
+    {pre, [
+        {compile, {asn, compile}},
+        {ct, escriptize}
+    ]},
+    {post, [
+        {clean, {asn, clean}}
+    ]}
+]}.
+
+{alias, [
+    {check, [
+        dialyzer,
+        {ct, "-c --sname t"},
+        {cover, "-v --min_coverage=40"}
+    ]}
+]}.
+
+{erlfmt, [
+    write,
+    verbose,
+    {files, [
+        "apps/*/{src,include,test}/*.{hrl,erl}",
+        "test/*.{hrl,erl}",
+        "apps/*/rebar.config",
+        "rebar.config"
+    ]}
+]}.
+
+{deps, []}.
+
+{profiles, [
+    {release, [
+        {deps, [getopt]},
+        {erl_opts, [no_debug_info, deterministic]}
+    ]},
+    {test, [
+        {deps, [getopt, {erlware_commons, "1.3.1"}]}
+    ]}
+]}.
+
+{erl_opts, [debug_info]}.
+
+{dialyzer, [
+    {exclude_mods, [rebar3_relsync_prv]},
+    {warnings, [no_return, error_handling]},
+    {plt_apps, top_level_deps},
+    {plt_extra_apps, []},
+    {plt_location, local},
+    {base_plt_apps, [erts, stdlib, kernel]},
+    {base_plt_location, global}
+]}.
+
+{erlc_compiler, [{recursive, false}]}.
+
+{escript_incl_apps, [getopt, relsync, relsync_lib]}.
+
+{escript_name, relsync}.
+
+{escript_main_app, relsync}.
+
+{escript_emu_args, "%%! +sbtu +A0 -noinput -noshell -mode minimal\n"}.
+
+{xref_checks, [
+    undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    exports_not_used,
+    deprecated_function_calls,
+    deprecated_functions
+]}.
+
+{xref_ignores, [rebar3_relsync_prv]}.
+
+{cover_enabled, true}.
+{cover_export_enabled, true}.
+{cover_excl_mods, [rebar3_relsync_prv]}.
